[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/ds_inspector_gd3/DebugFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/ds_inspector_gd3/Attributes/ColorAttr.gd" type="Script" id=2]

[node name="ColorAttr" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
script = ExtResource( 2 )

[node name="Name" type="Label" parent="."]
margin_right = 762.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 4.0
custom_fonts/font = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 766.0
margin_right = 1910.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1144.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 262.0
margin_right = 12.0
margin_bottom = 276.0
text = "R:"

[node name="RLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 569.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 1 )
virtual_keyboard_type = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 573.0
margin_top = 262.0
margin_right = 587.0
margin_bottom = 276.0
text = "G:"

[node name="GLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 591.0
margin_right = 1144.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 1 )
virtual_keyboard_type = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 542.0
margin_right = 1144.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 262.0
margin_right = 13.0
margin_bottom = 276.0
text = "B:"

[node name="BLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 17.0
margin_right = 570.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 1 )
virtual_keyboard_type = 2

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 574.0
margin_top = 262.0
margin_right = 587.0
margin_bottom = 276.0
text = "A:"

[node name="ALineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 591.0
margin_right = 1144.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 6.0
custom_fonts/font = ExtResource( 1 )
virtual_keyboard_type = 2
